# serial-server

./: .clang-format  .gitignore  CMakeLists.txt
include/: serial.h
src/: main.cpp  serial.cpp
